--- a/vc8_0/HashLib.vcproj
+++ b/vc8_0/HashLib.vcproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="Windows-1252"?>
+<?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
-	Name="TorrentWizard"
-	ProjectGUID="{2EFD2DB3-DC1D-4D81-9488-EAFBBB87471D}"
-	RootNamespace="TorrentWizard"
+	Version="8.00"
+	Name="HashLib"
+	ProjectGUID="{196C99FC-9A4E-421F-B44C-8E3FD177122F}"
+	RootNamespace="HashLib"
 	>
 	<Platforms>
 		<Platform
@@ -24,9 +24,7 @@
 			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
-			ConfigurationType="1"
-			UseOfMFC="1"
-			UseOfATL="1"
+			ConfigurationType="2"
 			CharacterSet="1"
 			>
 			<Tool
@@ -37,7 +35,7 @@
 			/>
 			<Tool
 				Name="MASM"
-				WarningLevel="4"
+				WarningLevel="2"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -51,7 +49,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE;_SCL_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_SCL_SECURE_NO_WARNINGS;HASHLIB_EXPORTS;HASHLIB_USE_ASM"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
@@ -68,16 +66,18 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="WIN32;_DEBUG"
+				PreprocessorDefinitions="_DEBUG"
+				AdditionalIncludeDirectories="$(IntDir)"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="version.lib"
-				OutputFile="$(OutDir)$(ProjectName).exe"
+				OutputFile="$(OutDir)$(ProjectName).dll"
+				GenerateManifest="false"
 				GenerateDebugInformation="true"
+				BaseAddress="0x29100000"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -108,9 +108,7 @@
 			Name="Debug|x64"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
-			ConfigurationType="1"
-			UseOfMFC="1"
-			UseOfATL="1"
+			ConfigurationType="2"
 			CharacterSet="1"
 			>
 			<Tool
@@ -135,7 +133,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN64;_DEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE;_SCL_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN64;_DEBUG;_WINDOWS;_USRDLL;_SCL_SECURE_NO_WARNINGS;HASHLIB_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
@@ -151,16 +149,18 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="WIN64;_DEBUG"
+				PreprocessorDefinitions="_DEBUG"
+				AdditionalIncludeDirectories="$(IntDir)"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="version.lib"
-				OutputFile="$(OutDir)$(ProjectName).exe"
+				OutputFile="$(OutDir)$(ProjectName).dll"
+				GenerateManifest="false"
 				GenerateDebugInformation="true"
+				BaseAddress="0x29100000"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -192,9 +192,8 @@
 			Name="Release|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
-			ConfigurationType="1"
+			ConfigurationType="2"
 			UseOfMFC="2"
-			UseOfATL="2"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -219,7 +218,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE;_SCL_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_SCL_SECURE_NO_WARNINGS;HASHLIB_EXPORTS;HASHLIB_USE_ASM"
 				MinimalRebuild="true"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="false"
@@ -234,19 +233,20 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG"
+				PreprocessorDefinitions="NDEBUG"
+				AdditionalIncludeDirectories="$(IntDir)"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="version.lib"
-				OutputFile="$(OutDir)$(ProjectName).exe"
+				OutputFile="$(OutDir)$(ProjectName).dll"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
+				BaseAddress="0x29100000"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -277,9 +277,8 @@
 			Name="Release|x64"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
-			ConfigurationType="1"
+			ConfigurationType="2"
 			UseOfMFC="2"
-			UseOfATL="2"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -304,7 +303,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN64;NDEBUG;_WINDOWS;_CRT_SECURE_NO_DEPRECATE;_SCL_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN64;NDEBUG;_WINDOWS;_USRDLL;_SCL_SECURE_NO_WARNINGS;HASHLIB_EXPORTS"
 				MinimalRebuild="true"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="false"
@@ -318,19 +317,20 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="WIN64;NDEBUG"
+				PreprocessorDefinitions="NDEBUG"
+				AdditionalIncludeDirectories="$(IntDir)"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="version.lib"
-				OutputFile="$(OutDir)$(ProjectName).exe"
+				OutputFile="$(OutDir)$(ProjectName).dll"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
+				BaseAddress="0x29100000"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -364,55 +364,91 @@
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\TorrentWizard\BENode.cpp"
+				RelativePath="..\HashLib\ED2K.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\Buffer.cpp"
+				RelativePath="..\HashLib\HashLib.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\CmdLine.cpp"
+				RelativePath="..\HashLib\MD4.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageCommandline.cpp"
+				RelativePath="..\HashLib\MD4_asm.asm"
+				>
+				<FileConfiguration
+					Name="Debug|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="MASM"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="MASM"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\HashLib\MD5.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageComment.cpp"
+				RelativePath="..\HashLib\MD5_asm.asm"
+				>
+				<FileConfiguration
+					Name="Debug|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="MASM"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="MASM"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\HashLib\SHA.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageFinished.cpp"
+				RelativePath="..\HashLib\SHA_asm.asm"
 				>
+				<FileConfiguration
+					Name="Debug|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="MASM"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="MASM"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageOutput.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\PagePackage.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\PageSingle.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\PageTracker.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\PageWelcome.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\StdAfx.cpp"
+				RelativePath="..\HashLib\stdafx.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -448,15 +484,27 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\TorrentBuilder.cpp"
+				RelativePath="..\HashLib\Tiger_asm.asm"
 				>
+				<FileConfiguration
+					Name="Debug|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="MASM"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|x64"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="MASM"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\TorrentWizard.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\WizardSheet.cpp"
+				RelativePath="..\HashLib\TigerTree.cpp"
 				>
 			</File>
 		</Filter>
@@ -466,97 +514,49 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\TorrentWizard\BENode.h"
+				RelativePath="..\HashLib\ED2K.h"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\Buffer.h"
+				RelativePath="..\HashLib\HashLib.h"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\CmdLine.h"
+				RelativePath="..\HashLib\MD4.h"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageCommandline.h"
+				RelativePath="..\HashLib\MD5.h"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageComment.h"
+				RelativePath="..\HashLib\Resource.h"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageFinished.h"
+				RelativePath="..\HashLib\SHA.h"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageOutput.h"
+				RelativePath="..\HashLib\stdafx.h"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PagePackage.h"
+				RelativePath="..\HashLib\TigerTree.h"
 				>
 			</File>
 			<File
-				RelativePath="..\TorrentWizard\PageSingle.h"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\PageTracker.h"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\PageWelcome.h"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\resource.h"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\StdAfx.h"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\TorrentBuilder.h"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\TorrentWizard.h"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\WizardSheet.h"
+				RelativePath="..\HashLib\Utility.hpp"
 				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
+			Filter="ico;cur;bmp;dlg;rc2;rct;bin;cnt;rtf;gif;jpg;jpeg;jpe;htm;xml;png"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath="..\TorrentWizard\Res\Hand.cur"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\Res\TorrentWizard.ico"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\TorrentWizard.rc"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\Res\TorrentWizard.rc2"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\Res\Uninstall.ICO"
-				>
-			</File>
-			<File
-				RelativePath="..\TorrentWizard\Res\Wizard.bmp"
+				RelativePath="..\HashLib\HashLib.rc"
 				>
 			</File>
 		</Filter>
