Redesigned download group properties dialog (added "download via BitTorrent" filter, bumped group serialization version). Fixed collection download group schema.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7433 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1535,23 +1535,26 @@ BEGIN
     PUSHBUTTON      "Close",IDC_CLOSE,225,75,50,14,NOT WS_VISIBLE
 END
 
-IDD_DOWNLOAD_GROUP DIALOGEX 0, 0, 327, 185
+IDD_DOWNLOAD_GROUP DIALOGEX 0, 0, 280, 254
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Download Group Properties"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "&Name:",IDC_STATIC,5,5,180,111,WS_GROUP
-    EDITTEXT        IDC_NAME,15,20,160,12,ES_AUTOHSCROLL
-    CONTROL         "List1",IDC_ICON_LIST,"SysListView32",LVS_LIST | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SHAREIMAGELISTS | LVS_AUTOARRANGE | WS_BORDER | WS_TABSTOP,15,40,160,65
-    GROUPBOX        "&Filters:",IDC_STATIC,195,5,125,156,WS_GROUP
-    COMBOBOX        IDC_FILTER_LIST,205,20,60,131,CBS_SIMPLE | CBS_AUTOHSCROLL | CBS_SORT | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "&Add",IDC_FILTER_ADD,271,20,40,15
-    PUSHBUTTON      "&Remove",IDC_FILTER_REMOVE,271,39,40,15
-    DEFPUSHBUTTON   "OK",IDOK,216,165,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,271,165,50,14
-    GROUPBOX        "Completed File &Folder:",IDC_STATIC,5,121,180,40,WS_GROUP
-    EDITTEXT        IDC_FOLDER,15,137,135,12,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "",IDC_DOWNLOADS_BROWSE,155,133,23,20
+    DEFPUSHBUTTON   "OK",IDOK,167,233,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,223,233,50,14
+    EDITTEXT        IDC_NAME,16,20,248,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_SCHEMAS,16,60,248,139,CBS_DROPDOWNLIST | CBS_OWNERDRAWVARIABLE | CBS_SORT | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "&BitTorrent downloads",IDC_DOWNLOADS_TORRENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,91,119,10
+    COMBOBOX        IDC_FILTER_LIST,150,102,60,75,CBS_SIMPLE | CBS_AUTOHSCROLL | CBS_SORT | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "&Add",IDC_FILTER_ADD,214,102,50,15
+    PUSHBUTTON      "&Remove",IDC_FILTER_REMOVE,214,120,50,15
+    EDITTEXT        IDC_FOLDER,16,203,192,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "",IDC_DOWNLOADS_BROWSE,215,199,23,20
+    PUSHBUTTON      "",IDC_DOWNLOADS_DEFAULT,241,199,23,20
+    GROUPBOX        "&Name:",IDC_STATIC,7,7,266,36,WS_GROUP
+    GROUPBOX        "&Filters:",IDC_STATIC,140,86,133,99,WS_GROUP
+    GROUPBOX        "&Completed File Folder:",IDC_STATIC,7,189,266,36,WS_GROUP
+    GROUPBOX        "&Type of file:",IDC_STATIC,7,46,266,36,WS_GROUP
 END
 
 IDD_HELP DIALOG  0, 0, 292, 159
@@ -2454,9 +2457,14 @@ BEGIN
     IDD_DOWNLOAD_GROUP, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 320
+        RIGHTMARGIN, 273
+        VERTGUIDE, 16
+        VERTGUIDE, 135
+        VERTGUIDE, 140
+        VERTGUIDE, 264
         TOPMARGIN, 7
-        BOTTOMMARGIN, 178
+        BOTTOMMARGIN, 247
+        HORZGUIDE, 177
     END
 
     IDD_HELP, DIALOG
